kubernetes/overlays/prod/ingress.yaml
# This file was automatically generated by weform 0.53.0. Please edit it
# to your liking.

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: product-expiry-manager
spec:
  rules:
  - host: product-expiry-manager.wetransfer.net
    http:
      paths:
      - backend:
          serviceName: product-expiry-manager
          servicePort: 3000
